[package]
name = "pid-lite"
version = "1.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/pid-lite"
documentation = "https://docs.rs/pid-lite"
description = "A small PID controller library"
readme = "README.md"
edition = "2018"
keywords = ["pid", "loop", "controller", "control systems"]
categories = ["algorithms", "date-and-time", "mathematics", "science::robotics", "no-std"]
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
